syntax = "proto3";

import "common.proto";

package authorization_code;

service AuthorizationCode {
  rpc Create (AuthorizationCodeRequest) returns (AuthorizationCodeRequest) {};
  rpc FindOne(AuthorizationCodeRequest) returns (AuthorizationCodeRequest) {};
  rpc FindAll (common.Empty) returns (AuthorizationCodeListRequest) {};
  rpc Update (AuthorizationCodeRequest) returns (AuthorizationCodeRequest) {};
  rpc Destroy (AuthorizationCodeRequest) returns (AuthorizationCodeRequest) {};
}

message AuthorizationCodeRequest {
  string id = 1;
  string client_id = 2;
  string user_id = 3;
  string code = 4;
  string code_challenge = 5;
  string code_challenge_method = 6;
  string scope = 7;
  string created_at = 8;
  string updated_at = 9;
}

message AuthorizationCodeListRequest {
  repeated AuthorizationCodeRequest authorization_codes = 1;
}
